DigicielFull/force-app/main/default/objects/CCMI__Time_Options__c/CCMI__Time_Options__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Configuration Options</label>
</CustomObject>