DigicielFull/force-app/main/default/objects/CCMI__Time_Options__c/fields/CCMI__Hide_Create_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Hide_Create_Time_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the &quot;Create Time Entry&quot; button be included on the timecard</description>
    <label>Hide Create Time Entry</label>
    <type>Checkbox</type>
</CustomField>