DigicielFull/force-app/main/default/objects/CCMI__Time_Options__c/fields/CCMI__Hide_Project_Assistant__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Hide_Project_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Project Assistant from Timecard</description>
    <inlineHelpText>Selecting this check-box will hide the project assistant tab from the timecard</inlineHelpText>
    <label>Hide the project assistant tab</label>
    <type>Checkbox</type>
</CustomField>