DigicielFull/force-app/main/default/objects/CCMI__Time_Options__c/fields/CCMI__Show_Approvals__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Show_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the &quot;Submit for Approval&quot; button be included on the timecard</description>
    <label>Show Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>